[package]
name = "tile-wave"
version = "0.1.0"
authors = ["Paul Miller <paul@pauljmiller.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid", rev="a06469e", features=["im", "image"]}
image = "0.23.10"
rand = "0.7.3"
